--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,10 +3,9 @@ version: 0.2
 phases:
   pre_build:
     commands:
-      - echo Checking for aws CLI and Docker installation...
+      - echo Logging in to Amazon ECR...
       - aws --version
-      - docker --version
-      - $(aws ecr get-login-password --region eu-north-1 | docker login --username AWS --password-stdin 060221766864.dkr.ecr.eu-north-1.amazonaws.com)
+      - $(aws ecr get-login-password --region eu-north-1 | sed 's|https://||' | docker login -u AWS --password-stdin 060221766864.dkr.ecr.eu-north-1.amazonaws.com)
       - REPOSITORY_URI=060221766864.dkr.ecr.eu-north-1.amazonaws.com/next-docker
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
