--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,11 @@
 version: 0.2
 
+env:
+  variables:
+    AWS_ACCESS_KEY_ID: $AWS_ACCESS_KEY_ID
+    AWS_SECRET_ACCESS_KEY: $AWS_SECRET_ACCESS_KEY
+    AWS_DEFAULT_REGION: eu-north-1
+
 phases:
   pre_build:
     commands:
