--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,9 @@ phases:
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
+      - aws configure set aws_access_key_id $AWS_ACCESS_KEY_ID
+      - aws configure set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
+      - aws configure set region $AWS_DEFAULT_REGION
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login -u AWS --password-stdin 060221766864.dkr.ecr.eu-north-1.amazonaws.com
       - REPOSITORY_URI=060221766864.dkr.ecr.eu-north-1.amazonaws.com/next-docker
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
