--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,3 +25,5 @@ phases:
       - echo Build completed on `date`
       - echo Pushing the Docker images...
       - docker push 060221766864.dkr.ecr.eu-north-1.amazonaws.com/next-docker:latest
+artifacts:
+  files: imagedefinitions.json
